--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -13,5 +13,6 @@
     <ul>
         <li><a href='/'>Home</a></li>
         <li><a href='/about'>About</a></li>
+        <li><a href='/project'>Projects</a></li>
     <ul>
 </header>
